--- a/TextFonts/TextFonts/TextFonts.vcxproj.filters
+++ b/TextFonts/TextFonts/TextFonts.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="XformCreator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StampWindowController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StampIndent.h">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="XformCreator.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StampWindowController.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
